# Stdlib

./: .cirrus.yml  .cirrus_Dockerfile  .drone.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  LICENSE  LICENSE.md  LICENSE.txt  Makefile  README.md  debug.sh
.github/workflows/: main.yml
ci/: fail-on-warning.sh
cmake/: build-ext-modules.py  config.cmake  config.h.in  cpack.cmake  options.cmake  parse-core-ext-files.cmake  sac-core-ext.txt
cmake/cpack/: README.txt
include/: Templates.mac  UDTtemplates.mac  Vector3.mac  arraybasics.mac  arraytransform.mac  builtin.mac  templates.mac
scripts/: debug.sh  debug_distmem.sh  sac2doxygen.py
src/: CMakeLists.txt
src/algorithms/: README.txt  Sort.sac
src/algorithms/src/: sort_cpu.cpp  sort_gpu.cu
src/auxiliary/: Benchmarking.sac  C99Benchmarking.sac  CudaBenchmarking.sac  Hiding.sac  Hiding.xsac  Interval.sac
src/auxiliary/src/C99Benchmarking/: bench.c
src/auxiliary/src/CudaBenchmarking/: bench.cu
src/classes/auxiliary/: Counter.sac
src/classes/random/: Rand.sac  Rand48.sac  Random.sac
src/classes/random/src/Rand/: Rand.c
src/classes/random/src/Rand48/: Rand48.c
src/classes/random/src/Random/: Random.c
src/numerical/: ComplexMath.sac  FixedPoint.sac  Math.sac  MathArray.sac  Numerical.sac  SaCMath.sac
src/numerical/src/Math/: frexp.c  int_log.c  isfinite.c  isinf.c  isnan.c  ldexp.c  sign.c
src/random/: Rand.sac  Rand48.sac  RandLC.sac  Xoshiro.sac  xoshiro128p.sage  xoshiro256p.sage
src/random/src/: Xoshiro.c
src/random/src/Rand/: Rand.c
src/stdio/: ArrayIO.xsac  BinFile.sac  Color8IO.sac  ComplexIO.sac  FibreIO.sac  File.sac  GreyIO.sac  IOresources.sac  ListIO.sac  PGM.sac  PPM.sac  ScalarIO.sac  ScalarIO.xsac  StdIO.sac  TermFile.sac
src/stdio/src/: BinFile.c  BinFile.h
src/stdio/src/ArrayIO/: ArrayIO.h  PrintArray.c  ShowArray.c
src/stdio/src/BinFile/: BinFile.h  binfReadDblArr.c  binfWriteDblArr.c  binfclose.c  binfflags.c  binfopen.c
src/stdio/src/ComplexIO/: PrintComplexArray.c
src/stdio/src/FibreIO/: FibrePrint.c  FibreScan.h  FibreScan.l  FibreScan.y  ScanDbl.c  ScanDblArr.c  ScanFlt.c  ScanFltArr.c  ScanInt.c  ScanIntArr.c  ScanOthers.c  ScanOthersArr.c  ScanString.c  ScanStringArr.c
src/stdio/src/File/: File.c  File.h  fclose.c  feof.c  fflush.c  fgetc.c  fgets.c  fopen.c  fprintf.c  fputc.c  fputs.c  fscanf.c  fscanl.c  fscans.c  fseek.c  ftell.c  mkstemp.c  rewind.c  rm.c  ungetc.c
src/stdio/src/PGM/: array2pgm.c  pgm2array.c  sac_pgm.h
src/stdio/src/PPM/: array2ppm.c  ppm2array.c
src/stdio/src/TermFile/: TermFile.h  feof.c  fflush.c  fgetc.c  fgets.c  fprintf.c  fputc.c  fputs.c  fscanf.c  fscanl.c  fscans.c  printf.c  puts.c  scanf.c  stdstreams.c  ungetc.c
src/structures/: Array.sac  ArrayArith.xsac  ArrayBasics.xsac  ArrayFormat.sac  ArrayFormat.xsac  ArrayReduce.xsac  ArrayTransform.xsac  ArrayTransformApl.xsac  Bits.sac  Bool.sac  Char.sac  Color8.sac  Color8.xsac  Complex.sac  ComplexArrayArith.xsac  ComplexArrayBasics.xsac  ComplexArrayTransform.xsac  ComplexBasics.sac  ComplexScalarArith.sac  Constants.sac  Grey.sac  List.sac  Quaternion.sac  Quaternion.xsac  ScalarArith.xsac  String.sac  StringArray.sac  Structures.sac  Vec3d.sac  Vector3.mac  Vector3.sac  Vector3.xsac  Vector3d.xsac  Vector3f.sac  Vector3f.xsac
src/structures/src/Bits/: BitAND.c  BitOR.c  BitOnesComplement.c  BitRotateLeft.c  BitRotateRight.c  BitShiftLeft.c  BitShiftRight.c  BitTwosComplement.c  BitXOR.c
src/structures/src/Char/: Char.c  Char.h  ctype.c
src/structures/src/Constants/: Constants.c  Constants.h  epidouble.c  maxdouble.c  maxfloat.c  maxint.c  mindouble.c  minfloat.c  minint.c  minmax.c  minmax.mac  randmax.c  tinydouble.c
src/structures/src/Format/: wordsize.c
src/structures/src/List/: List.c  List.h  append.c  cons.c  drop.c  empty.c  free.c  hd.c  length.c  nil.c  nth.c  take.c  tl.c
src/structures/src/String/: Str.c  Str.h  String.c  String.h  StringC.h  btos.c  copystr.c  ctos.c  dtos.c  freestr.c  ftos.c  itos.c  sizestr.c  sprintf.c  sscanf.c  sscanfstr.c  str.c  str.h  strcasecmp.c  strcat.c  strchr.c  strcmp.c  strcspn.c  strdrop.c  strext.c  strins.c  strlen.c  strmod.c  strncasecmp.c  strncat.c  strncmp.c  strovwt.c  strrchr.c  strsel.c  strspn.c  strstr.c  strtake.c  strtod.c  strtof.c  strtoi.c  (+3 more)
src/structures/src/StringArray/: StringArray.h  alloc.c  copy.c  dim.c  free.c  genarray.c  index2offset.c  modarray.c  sel.c  shape.c  size.c
src/system/: Clock.sac  CommandLine.sac  Dir.sac  Environment.sac  FileSystem.sac  GetOpt.sac  MTClock.sac  Process.sac  RTClock.sac  RTimer.sac  RuntimeError.sac  SysErr.sac  System.sac  Terminal.sac  TimeStamp.sac  World.sac
src/system/src/Clock/: Clock.h  clock.c  copytime.c  ctime.c  date.c  difftime.c  extracttime.c  gettime.c  isdst.c  isleap.c  mktime.c  sleep.c  strftime.c  strptime.c  to_time.c
src/system/src/CommandLine/: CommandLine.c
src/system/src/Dir/: Dir.h  closedir.c  opendir.c  readdir.c  rewinddir.c  seekdir.c  telldir.c
src/system/src/Environment/: Env.c  Env.h  Environ.c  ExistEnv.c  GetEnv.c  SetEnv.c  UnsetEnv.c
src/system/src/FileSystem/: FileSystem.h  access.c  dir.c  filesys.c  mktemp.c  pltmp.c  remove.c  rename.c  symlink.c  tempnam.c  testfile.c  tmpnam.c
src/system/src/GetOpt/: getopt.c
src/system/src/MTClock/: mtclock.c
src/system/src/Process/: Process.h  pclose.c  process.c  system.c
src/system/src/RTClock/: rtclock.c
src/system/src/RTimer/: rtimer.c
src/system/src/RuntimeError/: error.c
src/system/src/SysErr/: errorcode.c  failsucc.c  strerror.c
src/system/src/Terminal/: terminal.c
src/system/src/TimeStamp/: TimeStamp.c
src/system/src/World/: World.c
src/utrace/: Indent.sac  UTrace.sac
test/: xoshiro-advance.sac
